# ArknightsParser

./: CMakeLists.txt  LICENSE  README.md
archive/: CMakeLists.txt
archive/inc/archive/: unpack.h
archive/lib/: unpack_lz4.cc  unpack_lz4inv.cc  unpack_lzma.cc
archive/lib/lz4/: lz4.cc  lz4.h
archive/lib/lz4inv/: lz4.cc  lz4.h
archive/lib/lzma/: 7zTypes.h  Compiler.h  LzmaDec.cc  LzmaDec.h
common/: CMakeLists.txt
common/inc/common/: any.h  data_reader.h  data_view.h  guid.h  math.h  memory.h  rights.h  tstring.h  uninit.h
common/inc/common/macro/: common.h  flag_set.h
platform/: CMakeLists.txt
platform/inc/platform/: endian.h  mapped_file.h
platform/lib/: mapped_file.cc
playground/: CMakeLists.txt
unity/: CMakeLists.txt
unity/inc/unity/: flags.h  type.h  types.h  unpack.h
unity/inc/unity/file/: asset.h  bundle.h
unity/inc/unity/type/: README.md  array.h  collection.h  color.h  geometry.h  identify.h  numeric.h  resource.h  texture.h  typedef.h
unity/inc/unity/typing/: type.h
unity/lib/: type.cpp
unity/lib/file/: asset.cpp  bundle.cc  unpack.cc
unity/lib/typing/: type.cpp
